added mem